prduct_config postgres

--- a/product_service.properties
+++ b/product_service.properties
@@ -1,2 +1,10 @@
 server.port=8081
 price.discount=20%
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_store
+spring.datasource.username= postgres
+spring.datasource.password= Angel4167*
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+#management.endpoints.web.exposure.include=*
