--- a/cart_service-dev.properties
+++ b/cart_service-dev.properties
@@ -1,5 +1,5 @@
 server.port=8081
-price.discount=20%
+price.discount=15%
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_store
 spring.datasource.username= postgres
@@ -7,4 +7,4 @@ spring.datasource.password= Angel4167*
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
-#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=*
