--- a/product_service-dev.properties
+++ b/product_service-dev.properties
@@ -6,3 +6,5 @@ spring.datasource.username= postgres
 spring.datasource.password= Angel4167*
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+management.endpoints.web.exposure.include=*
