--- a/cart_service-dev.properties
+++ b/cart_service-dev.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=0
 price.discount=20%
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_store
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 management.endpoints.web.exposure.include=*
+
+
+spring.rabbitmq.port =8081
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username= guest
+spring.rabbitmq.password = guest
