--- a/product_service-dev.properties
+++ b/product_service-dev.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 management.endpoints.web.exposure.include=*
+
+
+spring.rabbitmq.port =5672
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username= guest
+spring.rabbitmq.password = guest
