--- a/product_service-dev.properties
+++ b/product_service-dev.properties
@@ -14,3 +14,6 @@ spring.rabbitmq.port =5672
 spring.rabbitmq.host=localhost
 spring.rabbitmq.username= guest
 spring.rabbitmq.password = guest
+
+
+angelldca.queue.name=cola1
